# capscalate

./: CMakeLists.txt  README.md
libsrc/: evillib.c  injected.c  injected.h
rootersrc/: main.cpp
src/: exploits.cpp  exploits.h  helpers.cpp  helpers.h  main.cpp
